@@ -9,56 +9,56 @@
  */
 
 INTERMediatorOnPage.doBeforeConstruct = function () {
-    //INTERMediator.addCondition("postalcode", {field: "f9", operator: "LIKE", value: "%東%"});
-    //INTERMediator.addCondition("postalcode", {field: "f9", operator: "LIKE", value: "%西%"});
-    //INTERMediator.addCondition("postalcode", {field: "__operation__", operator: "ex"});
+    //INTERMediator.addCondition('postalcode', {field: 'f9', operator: 'LIKE', value: '%東%'});
+    //INTERMediator.addCondition('postalcode', {field: 'f9', operator: 'LIKE', value: '%西%'});
+    //INTERMediator.addCondition('postalcode', {field: '__operation__', operator: 'ex'});
 };
 
 INTERMediatorOnPage.doAfterConstruct = function () {
     IMLibKeyDownEventDispatch.setExecuteByCode('condition', 13, function () {
         doSearch();
     });
-    IMLibChangeEventDispatch.setExecute("number", function () {
+    IMLibChangeEventDispatch.setExecute('number', function () {
         doSearch();
     });
     IMLibMouseEventDispatch.setExecute('search', function () {
         doSearch();
     });
     IMLibMouseEventDispatch.setExecute('sort1a', function () {
-        INTERMediator.additionalSortKey = {"postalcode": {field: 'f3', direction: 'ASC'}};
+        INTERMediator.additionalSortKey = {'postalcode': {field: 'f3', direction: 'ASC'}};
         doSearch();
     });
     IMLibMouseEventDispatch.setExecute('sort1d', function () {
-        INTERMediator.additionalSortKey = {"postalcode": {field: 'f3', direction: 'DESC'}};
+        INTERMediator.additionalSortKey = {'postalcode': {field: 'f3', direction: 'DESC'}};
         doSearch();
     });
     IMLibMouseEventDispatch.setExecute('sort2a', function () {
-        INTERMediator.additionalSortKey = {"postalcode": {field: 'f9', direction: 'ASC'}};
+        INTERMediator.additionalSortKey = {'postalcode': {field: 'f9', direction: 'ASC'}};
         doSearch();
     });
     IMLibMouseEventDispatch.setExecute('sort2d', function () {
-        INTERMediator.additionalSortKey = {"postalcode": {field: 'f9', direction: 'DESC'}};
+        INTERMediator.additionalSortKey = {'postalcode': {field: 'f9', direction: 'DESC'}};
         doSearch();
     });
 };
 
 function doSearch() {
     IMLibLocalContext.update('condition');
-    IMLibLocalContext.update("number");
-    var limit = IMLibLocalContext.getValue("pagedSize");
+    IMLibLocalContext.update('number');
+    var limit = IMLibLocalContext.getValue('pagedSize');
     if (parseInt(limit) > 0) {
         INTERMediator.pagedSize = limit;
     }
-    var c1 = IMLibLocalContext.getValue("condition");
-    INTERMediator.clearCondition("postalcode");
+    var c1 = IMLibLocalContext.getValue('condition');
+    INTERMediator.clearCondition('postalcode');
     if (c1 && c1.length > 0) {
-        INTERMediator.addCondition("postalcode", {field: 'f3', operator: 'LIKE', value: c1 + '%'});
-        INTERMediator.addCondition("postalcode", {field: 'f7', operator: 'LIKE', value: '%' + c1 + '%'});
-        INTERMediator.addCondition("postalcode", {field: 'f8', operator: 'LIKE', value: '%' + c1 + '%'});
-        INTERMediator.addCondition("postalcode", {field: 'f9', operator: 'LIKE', value: '%' + c1 + '%'});
-        INTERMediator.addCondition("postalcode", {field: '__operation__', operator: 'ex'});
+        INTERMediator.addCondition('postalcode', {field: 'f3', operator: 'LIKE', value: c1 + '%'});
+        INTERMediator.addCondition('postalcode', {field: 'f7', operator: 'LIKE', value: '%' + c1 + '%'});
+        INTERMediator.addCondition('postalcode', {field: 'f8', operator: 'LIKE', value: '%' + c1 + '%'});
+        INTERMediator.addCondition('postalcode', {field: 'f9', operator: 'LIKE', value: '%' + c1 + '%'});
+        INTERMediator.addCondition('postalcode', {field: '__operation__', operator: 'ex'});
     }
-    INTERMediator.startFrom = 0;
-    //IMLibLocalContext.archive();    // This isn't required other than IE8.
-    INTERMediator.construct(IMLibContextPool.contextFromName("postalcode"));
+    //INTERMediator.startFrom = 0;
+    INTERMediator.construct(IMLibContextPool.contextFromName('postalcode'));
+    IMLibPageNavigation.navigationSetup();
 }
